--- a/Interstellar Travel Customer Satisfaction Analysis/notebooks/02_LimpiezaEDA.ipynb
+++ b/Interstellar Travel Customer Satisfaction Analysis/notebooks/02_LimpiezaEDA.ipynb
@@ -220,6 +220,230 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Star System</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Distance to Destination (Light-Years)</th>\n",
+       "      <th>Price (Galactic Credits)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Cunningham Mountains</td>\n",
+       "      <td>Gliese 581</td>\n",
+       "      <td>1.09</td>\n",
+       "      <td>828.949275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Hayes Trace</td>\n",
+       "      <td>Alpha Centauri</td>\n",
+       "      <td>5.70</td>\n",
+       "      <td>488.469135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Anna Port</td>\n",
+       "      <td>Alpha Centauri</td>\n",
+       "      <td>0.37</td>\n",
+       "      <td>183.745881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Henry Ville</td>\n",
+       "      <td>Lalande 21185</td>\n",
+       "      <td>0.32</td>\n",
+       "      <td>358.754000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Graves Mall</td>\n",
+       "      <td>Exotic Destination 10</td>\n",
+       "      <td>6.17</td>\n",
+       "      <td>3073.759920</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547563</th>\n",
+       "      <td>Peterson Pike</td>\n",
+       "      <td>Zeta II Reticuli</td>\n",
+       "      <td>0.29</td>\n",
+       "      <td>274.456298</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547564</th>\n",
+       "      <td>Ronald Row</td>\n",
+       "      <td>Exotic Destination 7</td>\n",
+       "      <td>27.61</td>\n",
+       "      <td>2784.565350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547565</th>\n",
+       "      <td>John Lane</td>\n",
+       "      <td>Proxima Centauri</td>\n",
+       "      <td>4.04</td>\n",
+       "      <td>2640.288420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547566</th>\n",
+       "      <td>Elizabeth Mountain</td>\n",
+       "      <td>Alpha Centauri</td>\n",
+       "      <td>4.20</td>\n",
+       "      <td>420.132116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>547567</th>\n",
+       "      <td>Green Crest</td>\n",
+       "      <td>Zeta II Reticuli</td>\n",
+       "      <td>9.13</td>\n",
+       "      <td>629.199995</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>547568 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Star System            Destination  \\\n",
+       "0       Cunningham Mountains             Gliese 581   \n",
+       "1                Hayes Trace         Alpha Centauri   \n",
+       "2                  Anna Port         Alpha Centauri   \n",
+       "3                Henry Ville          Lalande 21185   \n",
+       "4                Graves Mall  Exotic Destination 10   \n",
+       "...                      ...                    ...   \n",
+       "547563         Peterson Pike       Zeta II Reticuli   \n",
+       "547564            Ronald Row   Exotic Destination 7   \n",
+       "547565             John Lane       Proxima Centauri   \n",
+       "547566    Elizabeth Mountain         Alpha Centauri   \n",
+       "547567           Green Crest       Zeta II Reticuli   \n",
+       "\n",
+       "        Distance to Destination (Light-Years)  Price (Galactic Credits)  \n",
+       "0                                        1.09                828.949275  \n",
+       "1                                        5.70                488.469135  \n",
+       "2                                        0.37                183.745881  \n",
+       "3                                        0.32                358.754000  \n",
+       "4                                        6.17               3073.759920  \n",
+       "...                                       ...                       ...  \n",
+       "547563                                   0.29                274.456298  \n",
+       "547564                                  27.61               2784.565350  \n",
+       "547565                                   4.04               2640.288420  \n",
+       "547566                                   4.20                420.132116  \n",
+       "547567                                   9.13                629.199995  \n",
+       "\n",
+       "[547568 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "star_system_destination = df[['Star System', 'Destination', 'Distance to Destination (Light-Years)', 'Price (Galactic Credits)']]\n",
+    "star_system_destination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    547568.000000\n",
+       "mean          8.333134\n",
+       "std          24.073530\n",
+       "min           0.000000\n",
+       "25%           0.980000\n",
+       "50%           2.710000\n",
+       "75%           7.450000\n",
+       "max        2625.910000\n",
+       "Name: Distance to Destination (Light-Years), dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Distance to Destination (Light-Years)'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5          Vazquez Tunnel\n",
+       "14          Robert Unions\n",
+       "23             Ann Summit\n",
+       "26             Eric Shoal\n",
+       "29        Caldwell Common\n",
+       "               ...       \n",
+       "547547      King Villages\n",
+       "547554        Lauren Ramp\n",
+       "547556      Evelyn Harbor\n",
+       "547561      Morales Shoal\n",
+       "547564         Ronald Row\n",
+       "Name: Star System, Length: 100555, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "star_system_destination[star_system_destination['Distance to Destination (Light-Years)'] >= 10.5]['Star System']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "star_system_destination.to_csv('../app/data/star_system_destination.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -2305,7 +2529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -2346,6 +2570,55 @@
     "print(df['Distance to Destination (Light-Years)'].max())\n",
     "print('-'*100)\n",
     "print(df['Distance to Destination (Light-Years)'].min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    547568.000000\n",
+       "mean          8.333134\n",
+       "std          24.073530\n",
+       "min           0.000000\n",
+       "25%           0.980000\n",
+       "50%           2.710000\n",
+       "75%           7.450000\n",
+       "max        2625.910000\n",
+       "Name: Distance to Destination (Light-Years), dtype: float64"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Distance to Destination (Light-Years)'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6.22      ,  5.3725    ,  3.67666667, ...,  3.39      ,\n",
+       "       17.28      , 37.84      ])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby('Star System')['Distance to Destination (Light-Years)'].mean().values"
    ]
   },
   {
@@ -2496,6 +2769,34 @@
    ],
    "source": [
     "sns.histplot(df['Duration of Stay (Earth Days)']);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    547568.00000\n",
+       "mean         33.97513\n",
+       "std          33.35670\n",
+       "min           0.00000\n",
+       "25%          11.00000\n",
+       "50%          22.00000\n",
+       "75%          47.00000\n",
+       "max         426.00000\n",
+       "Name: Duration of Stay (Earth Days), dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Duration of Stay (Earth Days)'].describe()"
    ]
   },
   {
@@ -2921,7 +3222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2932,10 +3233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count                         547568\n",
+       "mean     730 days 10:45:33.477485904\n",
+       "std      297 days 15:49:12.675979532\n",
+       "min                  1 days 00:00:00\n",
+       "25%                517 days 00:00:00\n",
+       "50%                730 days 00:00:00\n",
+       "75%                944 days 00:00:00\n",
+       "max               1459 days 00:00:00\n",
+       "Name: Tiempo Espera, dtype: object"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Tiempo Espera'].describe()\n"
+   ]
   },
   {
    "cell_type": "code",
